--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -32,6 +32,17 @@ body{
     color: var(--tt-ink);
 }
 
+a{
+    color: inherit;
+    text-decoration: none;
+}
+
+a:hover,
+a:focus{
+    color: inherit;
+    text-decoration: none;
+}
+
 /* HEADER (not sticky) */
 .tt-header{ border-bottom: 0; }
 
